# axum_note_sqlx

./: .env  Cargo.toml  thunder-collection_axum_note.json
src/: abstract_trait.rs  connection_pool.rs  errors.rs  handler.rs  main.rs  repository.rs  request.rs  router.rs  service.rs  service_register.rs
