[package]
name = "axum_note"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.18", features = ["json"] }
tokio = { version = "1.29.1", features = ["full"] }
dotenv = "0.15.0"
sqlx = { version = "0.7.1", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
serde = "1.0.171"
serde_json = "1.0.103"
tracing = "0.1.37"
async-trait = "0.1.71"
uuid = { version = "1.4.0", features = ["serde", "v4"] }
chrono = { version = "0.4.26", features = ["serde"] }
mockall = "0.11.4"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
